зробив мобільну версію

--- a/index.html
+++ b/index.html
@@ -56,6 +56,13 @@
             </li>
           </ul>
         </address>
+        <div>
+          <button class="header-menu-button" type="button">
+            <svg class="header-menu" width="24" height="24">
+              <use href="./images/icons.svg#icon-heroicons-solid_menu"></use>
+            </svg>
+          </button>
+        </div>
       </div>
     </header>
     <main>
@@ -132,7 +139,8 @@
             <li class="section-item">
               <img
                 class="photography"
-                src="./images/img-3.jpg"
+                srcset="./images/mark.jpg 1x, ./images/mark@2x.jpg 2x"
+                src="./images/mark.jpg"
                 alt="photo"
                 width="264"
               />
@@ -190,7 +198,8 @@
             <li class="section-item">
               <img
                 class="photography"
-                src="./images/img-2.jpg"
+                srcset="./images/tom.jpg 1x, ./images/tom@2x.jpg 2x"
+                src="./images/tom.jpg"
                 alt="photo"
                 width="264"
               />
@@ -248,7 +257,8 @@
             <li class="section-item">
               <img
                 class="photography"
-                src="./images/img-1.jpg"
+                srcset="./images/camila.jpg 1x, ./images/camila@2x.jpg 2x"
+                src="./images/camila.jpg"
                 alt="photo"
                 width="264"
               />
@@ -306,7 +316,8 @@
             <li class="section-item">
               <img
                 class="photography"
-                src="./images/img.jpg"
+                srcset="./images/daniel.jpg 1x, ./images/daniel@2x.jpg 2x"
+                src="./images/daniel.jpg"
                 alt="photo"
                 width="264"
               />
@@ -372,7 +383,11 @@
             <li class="card-item">
               <div class="section-overlay">
                 <img
-                  src="./images/img-8.jpg"
+                  srcset="
+                    ./images/banking-app.jpg    1x,
+                    ./images/banking-app@2x.jpg 2x
+                  "
+                  src="./images/banking-app.jpg"
                   alt="site visualization"
                   width="360"
                 />
@@ -390,7 +405,11 @@
             <li class="card-item">
               <div class="section-overlay">
                 <img
-                  src="./images/img-7.jpg"
+                  srcset="
+                    ./images/cashless-payment.jpg    1x,
+                    ./images/cashless-payment@2x.jpg 2x
+                  "
+                  src="./images/cashless-payment.jpg"
                   alt="qr code reader"
                   width="360"
                 />
@@ -408,7 +427,11 @@
             <li class="card-item">
               <div class="section-overlay">
                 <img
-                  src="./images/img-6.jpg"
+                  srcset="
+                    ./images/meditation-app.jpg    1x,
+                    ./images/meditation-app@2x.jpg 2x
+                  "
+                  src="./images/meditation-app.jpg"
                   alt="cross platform"
                   width="360"
                 />
@@ -425,7 +448,15 @@
             </li>
             <li class="card-item">
               <div class="section-overlay">
-                <img src="./images/img-5.jpg" alt="taxi service" width="360" />
+                <img
+                  srcset="
+                    ./images/taxi-service.jpg    1x,
+                    ./images/taxi-service@2x.jpg 2x
+                  "
+                  src="./images/taxi-service.jpg"
+                  alt="taxi service"
+                  width="360"
+                />
                 <p class="overlay-text">
                   14 Stylish and User-Friendly App Design Concepts · Task
                   Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
@@ -440,7 +471,11 @@
             <li class="card-item">
               <div class="section-overlay">
                 <img
-                  src="./images/img-9.jpg"
+                  srcset="
+                    ./images/screen-illustrations.jpg    1x,
+                    ./images/screen-illustrations@2x.jpg 2x
+                  "
+                  src="./images/screen-illustrations.jpg"
                   alt="online courses"
                   width="360"
                 />
@@ -457,7 +492,15 @@
             </li>
             <li class="card-item">
               <div class="section-overlay">
-                <img src="./images/img-4.jpg" alt="design" width="360" />
+                <img
+                  srcset="
+                    ./images/online-courses.jpg    1x,
+                    ./images/online-courses@2x.jpg 2x
+                  "
+                  src="./images/online-courses.jpg"
+                  alt="design"
+                  width="360"
+                />
                 <p class="overlay-text">
                   14 Stylish and User-Friendly App Design Concepts · Task
                   Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
