--- a/index.html
+++ b/index.html
@@ -382,15 +382,34 @@
           <ul class="portfolio-list">
             <li class="card-item">
               <div class="section-overlay">
-                <img
-                  srcset="
-                    ./images/banking-app.jpg    1x,
-                    ./images/banking-app@2x.jpg 2x
-                  "
-                  src="./images/banking-app.jpg"
-                  alt="site visualization"
-                  width="360"
-                />
+                <picture>
+                  <source
+                    srcset="
+                      ./images/banking-app.jpg    1x,
+                      ./images/banking-app@2x.jpg 2x
+                    "
+                    media="(min-width: 1158px)"
+                  />
+                  <source
+                    srcset="
+                      ./images/portfolio-tablet/img-5tablet.jpg    1x,
+                      ./images/portfolio-tablet/img-5tablet@2x.jpg 2x
+                    "
+                    media="(min-width: 768px)"
+                  />
+                  <source
+                    srcset="
+                      ./images/portfolio-mobile/img-5.jpg    1x,
+                      ./images/portfolio-mobile/img-5@2x.jpg 2x
+                    "
+                    media="(max-width: 767px)"
+                  />
+                  <img
+                    src="./images/portfolio-mobile/img-5.jpg"
+                    alt="site visualization"
+                    width="360"
+                  />
+                </picture>
                 <p class="overlay-text">
                   14 Stylish and User-Friendly App Design Concepts · Task
                   Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
@@ -404,15 +423,34 @@
             </li>
             <li class="card-item">
               <div class="section-overlay">
-                <img
-                  srcset="
-                    ./images/cashless-payment.jpg    1x,
-                    ./images/cashless-payment@2x.jpg 2x
-                  "
-                  src="./images/cashless-payment.jpg"
-                  alt="qr code reader"
-                  width="360"
-                />
+                <picture>
+                  <source
+                    srcset="
+                      ./images/cashless-payment.jpg    1x,
+                      ./images/cashless-payment@2x.jpg 2x
+                    "
+                    media="(min-width: 1158px)"
+                  />
+                  <source
+                    srcset="
+                      ./images/portfolio-tablet/img-4tablet.jpg    1x,
+                      ./images/portfolio-tablet/img-4tablet@2x.jpg 2x
+                    "
+                    media="(min-width: 768px)"
+                  />
+                  <source
+                    srcset="
+                      ./images/portfolio-mobile/img-4.jpg    1x,
+                      ./images/portfolio-mobile/img-4@2x.jpg 2x
+                    "
+                    media="(max-width: 767px)"
+                  />
+                  <img
+                    src="./images/portfolio-mobile/img-4.jpg"
+                    alt="qr code reader"
+                    width="360"
+                  />
+                </picture>
                 <p class="overlay-text">
                   14 Stylish and User-Friendly App Design Concepts · Task
                   Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
@@ -426,15 +464,34 @@
             </li>
             <li class="card-item">
               <div class="section-overlay">
-                <img
-                  srcset="
-                    ./images/meditation-app.jpg    1x,
-                    ./images/meditation-app@2x.jpg 2x
-                  "
-                  src="./images/meditation-app.jpg"
-                  alt="cross platform"
-                  width="360"
-                />
+                <picture>
+                  <source
+                    srcset="
+                      ./images/meditation-app.jpg    1x,
+                      ./images/meditation-app@2x.jpg 2x
+                    "
+                    media="(min-width: 1158px)"
+                  />
+                  <source
+                    srcset="
+                      ./images/portfolio-tablet/img-3tablet.jpg    1x,
+                      ./images/portfolio-tablet/img-3tablet@2x.jpg 2x
+                    "
+                    media="(min-width: 768px)"
+                  />
+                  <source
+                    srcset="
+                      ./images/portfolio-mobile/img-3.jpg    1x,
+                      ./images/portfolio-mobile/img-3@2x.jpg 2x
+                    "
+                    media="(max-width: 767px)"
+                  />
+                  <img
+                    src="./images/portfolio-mobile/img-3.jpg"
+                    alt="cross platform"
+                    width="360"
+                  />
+                </picture>
                 <p class="overlay-text">
                   14 Stylish and User-Friendly App Design Concepts · Task
                   Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
@@ -448,15 +505,34 @@
             </li>
             <li class="card-item">
               <div class="section-overlay">
-                <img
-                  srcset="
-                    ./images/taxi-service.jpg    1x,
-                    ./images/taxi-service@2x.jpg 2x
-                  "
-                  src="./images/taxi-service.jpg"
-                  alt="taxi service"
-                  width="360"
-                />
+                <picture>
+                  <source
+                    srcset="
+                      ./images/taxi-service.jpg    1x,
+                      ./images/taxi-service@2x.jpg 2x
+                    "
+                    media="(min-width: 1158px)"
+                  />
+                  <source
+                    srcset="
+                      ./images/portfolio-tablet/img-2tablet.jpg    1x,
+                      ./images/portfolio-tablet/img-2tablet@2x.jpg 2x
+                    "
+                    media="(min-width: 768px)"
+                  />
+                  <source
+                    srcset="
+                      ./images/portfolio-mobile/img-2.jpg    1x,
+                      ./images/portfolio-mobile/img-2@2x.jpg 2x
+                    "
+                    media="(max-width: 767px)"
+                  />
+                  <img
+                    src="./images/portfolio-mobile/img-2.jpg"
+                    alt="taxi service"
+                    width="360"
+                  />
+                </picture>
                 <p class="overlay-text">
                   14 Stylish and User-Friendly App Design Concepts · Task
                   Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
@@ -470,15 +546,34 @@
             </li>
             <li class="card-item">
               <div class="section-overlay">
-                <img
-                  srcset="
-                    ./images/screen-illustrations.jpg    1x,
-                    ./images/screen-illustrations@2x.jpg 2x
-                  "
-                  src="./images/screen-illustrations.jpg"
-                  alt="online courses"
-                  width="360"
-                />
+                <picture>
+                  <source
+                    srcset="
+                      ./images/screen-illustrations.jpg    1x,
+                      ./images/screen-illustrations@2x.jpg 2x
+                    "
+                    media="(min-width: 1158px)"
+                  />
+                  <source
+                    srcset="
+                      ./images/portfolio-tablet/img-1tablet.jpg    1x,
+                      ./images/portfolio-tablet/img-1tablet@2x.jpg 2x
+                    "
+                    media="(min-width: 768px)"
+                  />
+                  <source
+                    srcset="
+                      ./images/portfolio-mobile/img-1.jpg    1x,
+                      ./images/portfolio-mobile/img-1@2x.jpg 2x
+                    "
+                    media="(max-width: 767px)"
+                  />
+                  <img
+                    src="./images/portfolio-mobile/img-1.jpg"
+                    alt="online courses"
+                    width="360"
+                  />
+                </picture>
                 <p class="overlay-text">
                   14 Stylish and User-Friendly App Design Concepts · Task
                   Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
@@ -492,15 +587,34 @@
             </li>
             <li class="card-item">
               <div class="section-overlay">
-                <img
-                  srcset="
-                    ./images/online-courses.jpg    1x,
-                    ./images/online-courses@2x.jpg 2x
-                  "
-                  src="./images/online-courses.jpg"
-                  alt="design"
-                  width="360"
-                />
+                <picture>
+                  <source
+                    srcset="
+                      ./images/online-courses.jpg    1x,
+                      ./images/online-courses@2x.jpg 2x
+                    "
+                    media="(min-width: 1158px)"
+                  />
+                  <source
+                    srcset="
+                      ./images/portfolio-tablet/imgtablet.jpg    1x,
+                      ./images/portfolio-tablet/imgtablet@2x.jpg 2x
+                    "
+                    media="(min-width: 768px)"
+                  />
+                  <source
+                    srcset="
+                      ./images/portfolio-mobile/img.jpg    1x,
+                      ./images/portfolio-mobile/img@2x.jpg 2x
+                    "
+                    media="(max-width: 767px)"
+                  />
+                  <img
+                    src="./images/portfolio-mobile/img.jpg"
+                    alt="design"
+                    width="360"
+                  />
+                </picture>
                 <p class="overlay-text">
                   14 Stylish and User-Friendly App Design Concepts · Task
                   Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
