--- a/index.html
+++ b/index.html
@@ -56,12 +56,86 @@
             </li>
           </ul>
         </address>
-        <div>
-          <button class="header-menu-button" type="button">
-            <svg class="header-menu" width="24" height="24">
-              <use href="./images/icons.svg#icon-heroicons-solid_menu"></use>
+        <button class="header-menu-button" type="button">
+          <svg class="header-menu" width="24" height="24">
+            <use href="./images/icons.svg#icon-heroicons-solid_menu"></use>
+          </svg>
+        </button>
+      </div>
+      <div class="mobile-menu">
+        <div class="container container-mobile-menu">
+          <button class="mobile-menu-button" type="button">
+            <svg class="menu-button-icons" width="8" height="8">
+              <use href="./images/icons.svg#icon-close-black-18dp"></use>
             </svg>
           </button>
+          <nav class="mobile-menu-nav">
+            <ul class="mobile-menu-list">
+              <li class="mobile-menu-item">
+                <a class="mobile-menu-link carrent" href="./index.html"
+                  >Studio</a
+                >
+              </li>
+              <li class="mobile-menu-item">
+                <a class="mobile-menu-link" href="">Portfolio</a>
+              </li>
+              <li class="mobile-menu-item">
+                <a class="mobile-menu-link" href="">Contacts</a>
+              </li>
+            </ul>
+          </nav>
+          <address class="addres-menu">
+            <ul class="addres-menu-list">
+              <li class="addres-menu-item">
+                <a class="addres-menu-link accent" href="tel:+110001111111"
+                  >+11 (000) 111-11-11
+                </a>
+              </li>
+              <li class="addres-menu-item">
+                <a class="addres-menu-link" href="mailto:info@devstudio.com"
+                  >info@devstudio.com</a
+                >
+              </li>
+            </ul>
+          </address>
+          <ul class="mobile-social-list">
+            <li class="mobile-social-item">
+              <a
+                class="mobile-social-link"
+                href="https://www.instagram.com/"
+                target="_blank"
+                ><svg class="mobile-social-svg" width="24" height="24">
+                  <use href="./images/icons.svg#icon-instagram-2"></use></svg
+              ></a>
+            </li>
+            <li class="mobile-social-item">
+              <a
+                class="mobile-social-link"
+                href="https://www.twitter.com/"
+                target="_blank"
+                ><svg class="mobile-social-svg" width="24" height="24">
+                  <use href="./images/icons.svg#icon-twitter-1"></use></svg
+              ></a>
+            </li>
+            <li class="mobile-social-item">
+              <a
+                class="mobile-social-link"
+                href="https://www.facebook.com/"
+                target="_blank"
+                ><svg class="mobile-social-svg" width="24" height="24">
+                  <use href="./images/icons.svg#icon-facebook-1"></use></svg
+              ></a>
+            </li>
+            <li class="mobile-social-item">
+              <a
+                class="mobile-social-link"
+                href="https://www.linkedin.com/"
+                target="_blank"
+                ><svg class="mobile-social-svg" width="24" height="24">
+                  <use href="./images/icons.svg#icon-linkedin-1"></use></svg
+              ></a>
+            </li>
+          </ul>
         </div>
       </div>
     </header>
@@ -405,9 +479,8 @@
                     media="(max-width: 767px)"
                   />
                   <img
-                    src="./images/portfolio-mobile/img-5.jpg"
+                    src="./images/banking-app.jpg"
                     alt="site visualization"
-                    width="360"
                   />
                 </picture>
                 <p class="overlay-text">
@@ -448,7 +521,6 @@
                   <img
                     src="./images/portfolio-mobile/img-4.jpg"
                     alt="qr code reader"
-                    width="360"
                   />
                 </picture>
                 <p class="overlay-text">
@@ -489,7 +561,6 @@
                   <img
                     src="./images/portfolio-mobile/img-3.jpg"
                     alt="cross platform"
-                    width="360"
                   />
                 </picture>
                 <p class="overlay-text">
@@ -530,7 +601,6 @@
                   <img
                     src="./images/portfolio-mobile/img-2.jpg"
                     alt="taxi service"
-                    width="360"
                   />
                 </picture>
                 <p class="overlay-text">
@@ -571,7 +641,6 @@
                   <img
                     src="./images/portfolio-mobile/img-1.jpg"
                     alt="online courses"
-                    width="360"
                   />
                 </picture>
                 <p class="overlay-text">
@@ -609,11 +678,7 @@
                     "
                     media="(max-width: 767px)"
                   />
-                  <img
-                    src="./images/portfolio-mobile/img.jpg"
-                    alt="design"
-                    width="360"
-                  />
+                  <img src="./images/portfolio-mobile/img.jpg" alt="design" />
                 </picture>
                 <p class="overlay-text">
                   14 Stylish and User-Friendly App Design Concepts · Task
